syntax = "proto3";

package io.harness.eventsframework.organization;

option java_multiple_files = true;

message OrganizationEntityChangeDTO {
  string accountIdentifier = 1;
  string identifier = 2;
}